fr/doc: link to the french refcard PDF.

--- a/fr/org-mode-documentation.org
+++ b/fr/org-mode-documentation.org
@@ -42,8 +42,8 @@
 
 * La carte de référence pour Org
 
-  - Télécharger la [[http://orgmode.org/orgcard.pdf][Refcard]] d'org-mode.
-  - Il y a aussi une [[http://orgmode.org/orgcard.html][version HTML]] et [[http://orgmode.org/orgcard.txt][texte]] de la refcard.
+  - Télécharger la [[http://orgmode.org/worg/images/bzg/fr-orgcard.pdf][Refcard]] d'org-mode ([[http://orgmode.org/orgcard.pdf][ici]] pour la version anglaise)
+  - Il y a aussi une [[http://orgmode.org/orgcard.html][version HTML]] et [[http://orgmode.org/orgcard.txt][texte]] de la refcard en anglais.
 
 * La FAQ Org-mode
   - La [[http://orgmode.org/worg/org-faq.php][FAQ Org Mode]] est éditable par les utilisateurs et maintenu par la
