--- a/ja/talks.org
+++ b/ja/talks.org
@@ -22,7 +22,7 @@
 この講演は、2010年2月8日に the Max Planck Institute for Neurological Research in Cologne, Germany (http://nf.mpg.de) で行われました。詳細は[[http://www.nf.mpg.de/orgmode/guest-talk-dominik.html][こちら]]のページをチェックしてください。
 
 #+begin_html
-<iframe src="http://player.vimeo.com/video/33725204?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=1" width="402" height="302" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<iframe src="http://player.vimeo.com/video/33725204?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=0" width="402" height="302" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 #+end_html
 
 * [[http://twit.tv/show/floss-weekly/136][FLOSSウィークリィ]] の Carsten Dominik 氏へのインタビュー (2010)
@@ -36,7 +36,7 @@
 ** FOSDEM 2011 で行われたプレゼンテーション
 
 #+begin_html
-<iframe style="border:none;width:650px;height:541px;" src="http://icant.co.uk/slidesharehtml/embed.php?url=http://www.slideshare.net/bzg/org-fosdem2011&width=600"></iframe>
+<iframe src="http://www.slideshare.net/slideshow/embed_code/8401331" width="425" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 #+end_html
 
 ** GNU Hackers meeting (2011年8月、パリ）で行われたプレゼンテーション
