--- a/es/org-mode-news.org
+++ b/es/org-mode-news.org
@@ -14,6 +14,7 @@
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2012-05-16> Release 7.8.10 (bugfix release)
 - <2012-04-11> Release 7.8.09 (bugfix release)
 - <2012-04-02> Release 7.8.08 (bugfix release)
 - <2012-03-31> Release 7.8.07 (bugfix release)
