--- a/fr/org-mode-nouvelles.org
+++ b/fr/org-mode-nouvelles.org
@@ -14,6 +14,7 @@
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2012-05-16> Sortie de la version 7.8.10 (corrections).
 - <2012-04-11> Sortie de la version 7.8.09 (corrections).
 - <2012-04-02> Sortie de la version 7.8.08 (corrections).
 - <2012-03-31> Sortie de la version 7.8.07 (corrections).
